# spectre

./: .clang-format  .gitignore  CMakeLists.txt  annotate.py  api_test_success.txt  cdef.txt  compile_commands.json  extracted_apis.txt  fix_cdef.py  generate.py  generate_lua.py  generate_lua_v2.py  generate_lua_v3.py  generate_modules.py  generate_pure_c_api.py  generate_refactored_architecture.py  generate_sandbox_modules.py  generate_sdk.py  generate_spectre_cpp.py  get_flecs_name.cpp  parse_functions.py  parse_headers.py  print_name.cpp  replace_props.py  run_gdb.sh  run_gdb2.sh  run_gdb3.sh  run_gdb4.sh  sandbox_auto.lua  spectre_auto.lua  temp_prefab_script.lua  test.py  test_flecs.cpp  test_flecs_empty.cpp  test_flecs_name  test_flecs_name.cpp  test_flecs_singleton.cpp  test_lookup.cpp  test_regex.py  test_struct.py  (+2 more)
demo/: CMakeLists.txt
demo/resources/asteroid/configs/: renderer.json  resources.json
demo/resources/asteroid/resources/texts/: mock.txt
dependencies/: ecs.lua  spectre.lua
docs/: CONFIGURATION.md
spectre/: CMakeLists.txt
spectre/include/sandbox/sdk/: window_input_service.hpp
spectre/include/spectre/: components.h  services.h  spectre.h
spectre/include/spectre/abi/: prefabs_service.h  renderer_components.h  renderer_service.h  resources_service.h  scenes_service.h  scripts_components.h  scripts_service.h  serializer_service.h  spectre_window_input_abi.h  window_service.h
spectre/include/spectre/components/: core_component.h  prefabs_component.h  renderer_component.h  resources_component.h  scenes_component.h  scripts_component.h  serializer_component.h  window_component.h
spectre/include/spectre/sdk/: components.hpp  prefabs.hpp  renderer.hpp  resources.hpp  scenes.hpp  scripts.hpp  serializer.hpp  window.hpp  window_input_service.hpp  window_service.hpp
spectre/include/spectre/services/: components_service.h  prefabs_service.h  renderer_service.h  resources_service.h  scenes_service.h  scripts_service.h  serializer_service.h  window_service.h
spectre/source/: pch.h  spectre.cpp
spectre/source/modules/components/: components_module.cpp  components_module.h  components_service.cpp
spectre/source/modules/input/: input_module.cpp
spectre/source/modules/prefabs/: prefabs.cpp  prefabs.h  prefabs_module.cpp  prefabs_module.h  prefabs_service.cpp
spectre/source/modules/renderer/: renderer_module.cpp  renderer_module.h  renderer_service.cpp
spectre/source/modules/resources/: resource_module.cpp  resource_module.h  resources_module.cpp  resources_module.h  resources_service.cpp
spectre/source/modules/runtime/: runtime_module.cpp  runtime_module.h
spectre/source/modules/scenes/: scene_module.cpp  scenes_modude.cpp  scenes_modude.h  scenes_module.cpp  scenes_module.h  scenes_service.cpp
spectre/source/modules/scripts/: generate_ffi_header.py  generate_ffi_stubs.py  generate_header.py  generate_stubs.py  generate_wrappers.py  generated_components.i  scripts_interface.i  scripts_interface_wrap.cxx  scripts_module.cpp  scripts_module.h  scripts_module.hpp  scripts_service.cpp  spectre_api_stubs.lua  spectre_ffi_api.h  spectre_scripting.i
spectre/source/modules/serializer/: serializer_module.cpp  serializer_module.h  serializer_service.cpp
spectre/source/modules/window/: window_input_module.cpp  window_module.cpp  window_module.h  window_service.cpp
spectre/source/utilities/: hashing.h  properties_helpers.h
tests/: CMakeLists.txt
tests/application/: CMakeLists.txt
tests/application/resources/app/: configuration.json
tests/application/resources/app/resources/assets/scripts/: .luarc.json  TestScript.lua  api_tests.lua  dump_api.lua
tests/application/resources/app/resources/assets/scripts/declarations/: spectre_api.h
tests/application/resources/app/resources/assets/scripts/declarations/stubs/: ffi.lua  spectre_api.lua
tests/application/resources/app/resources/assets/scripts/headers/: flecs.h  sandbox.h  spectre.h
tests/application/resources/app/resources/assets/scripts/headers/stubs/: sandbox.lua  spectre.lua
tests/application/resources/app/resources/assets/scripts/tools/: spectre.lua
tests/application/resources/app/resources/assets/scripts/wrappers/: flecs.lua  sandbox.lua  spectre.lua
tests/application/resources/app/resources/configs/: startup.json
tests/application/resources/app/resources/scenes/prefabs/: RectanglePrefab.json
tests/application/resources/app/resources/scenes/scenes/: MainScene.json
tests/application/resources/app/resources/scenes/states/: MainState.json
tests/application/resources/app/state/: prefabs.json  prefabs_override.json  scenes.json
tests/application/resources/app/state/scripts/: player_movement.lua
tests/application/resources/application/: configuration.json
tests/application/resources/application/state/: prefabs.json
tests/application/resources/asteroid/configs/: resources.json  window.json
tests/application/resources/asteroid/resources/scripts/: api_tests.lua
tests/application/resources/asteroid/scenes/prefabs/: RectanglePrefab.json  TextPrefab.json
tests/application/resources/asteroid/scenes/scenes/: MainScene.json
tests/application/source/: main.cpp
tests/suite/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/source/: main.cpp  prefabs_test.cpp  resources_test.cpp  scripts_test.cpp
tests/unit/source/modules/: test_components.cpp  test_lua_api.cpp  test_prefabs.cpp  test_renderer.cpp  test_resources.cpp  test_scenes.cpp  test_scripts.cpp  test_serializer.cpp  test_window.cpp
